# rust-markdown-custom-directives

./: .gitignore  Cargo.toml  README.md
.config/: nextest.toml
crates/mdx_ext/: Cargo.toml
crates/mdx_ext/examples/: render.rs
crates/mdx_ext/src/: config.rs  engine.rs  error.rs  lib.rs  span.rs
crates/mdx_ext/src/ast/: attr.rs  directive.rs  link.rs  mod.rs
crates/mdx_ext/src/diagnostics/: mod.rs
crates/mdx_ext/src/extension/: mod.rs
crates/mdx_ext/src/parser/: comrak_adapter.rs  mod.rs  preprocess.rs  registry.rs
crates/mdx_ext/src/render/: debug.rs  html.rs  mod.rs  text.rs
crates/mdx_ext/src/runtime/: cache.rs  mod.rs  resolver.rs
crates/mdx_ext/src/syntax/: mod.rs
crates/mdx_ext/src/transform/: mod.rs  normalize.rs  resolve.rs
crates/mdx_lua/: Cargo.toml
crates/mdx_lua/examples/: convert.rs  npc_link.rs  statblock.rs
crates/mdx_lua/src/: convert.rs  lib.rs  runtime.rs  sandbox.rs
examples/convert/: convert.lua  input.md
examples/npc_link/: input.md  main.rs  npc.lua
examples/statblock/: input.md  main.rs  statblock.lua
tests/: Cargo.toml
tests/fixtures/: blockquotes.md  code.md  directive_in_code_fence.md  emphasis.md  frontmatter.md  html_passthrough.md  links_images.md  lists.md
tests/scripts/: budget_buster.lua  component.lua  data.lua  error.lua  html_raw.lua  mutual_a_b.lua  recursive_self.lua  shout.lua
tests/src/: lib.rs
tests/tests/: directive_outputs.rs  end_to_end.rs  golden_passthrough.rs  malformed_syntax.rs  reparse_recursion.rs  snapshot_directives.rs
tests/tests/snapshots/: golden_passthrough__golden_blockquotes.snap  golden_passthrough__golden_code.snap  golden_passthrough__golden_emphasis.snap  golden_passthrough__golden_frontmatter.snap  golden_passthrough__golden_headings.snap  golden_passthrough__golden_html_passthrough.snap  golden_passthrough__golden_links_images.snap  golden_passthrough__golden_lists.snap  snapshot_directives__snapshot_block_directive_ast.snap  snapshot_directives__snapshot_inline_directive_ast.snap  snapshot_directives__snapshot_malformed_diagnostics.snap  snapshot_directives__snapshot_wiki_link_namespaced.snap  snapshot_directives__snapshot_wiki_link_plain.snap
