[workspace]
resolver = "2"
members = [
    "crates/mdx_ext",
    "crates/mdx_lua",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HRKings/rust-markdown-custom-directives"
authors = ["mdx contributors"]

[workspace.dependencies]
comrak = { version = "0.52", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "1"
tracing = "0.1"
mlua = { version = "0.10", default-features = false }
insta = { version = "1", features = ["yaml"] }

mdx_ext = { path = "crates/mdx_ext", version = "0.1.0" }
mdx_lua = { path = "crates/mdx_lua", version = "0.1.0" }
