[package]
name = "mdx_integration_tests"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
mdx_ext = { workspace = true }
mdx_lua = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
