[package]
name = "mdx_ext"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
description = "A comrak-based markdown engine extension adding block/inline directives, wiki links, and runtime-pluggable directive handlers."

[dependencies]
comrak = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
